# simple-graphql

./: Cargo.toml  README.md
models/starwars/: Cargo.toml
